[gd_scene load_steps=10 format=3 uid="uid://dhpm8c6ce6vb0"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_o8sy6"]
[ext_resource type="Texture2D" uid="uid://cdhsdek7afjlj" path="res://assets/background/9285000.jpg" id="2_35fhj"]
[ext_resource type="PackedScene" uid="uid://bd2jevu5imnto" path="res://scenes/startScreen.tscn" id="3_u4w22"]
[ext_resource type="Script" path="res://scripts/domino_manager.gd" id="4_f3mcp"]
[ext_resource type="PackedScene" uid="uid://o48jk4dckoer" path="res://scenes/domino_slot.tscn" id="6_jk677"]
[ext_resource type="Script" path="res://scripts/domino_slot.gd" id="7_hicqo"]
[ext_resource type="AudioStream" uid="uid://cd4ju6fp6u55d" path="res://assets/music/bitSurf.wav" id="8_cxv0x"]
[ext_resource type="PackedScene" uid="uid://dfpoqc88xspqk" path="res://screen_effect.tscn" id="9_6jgts"]
[ext_resource type="Script" path="res://scenes/player_hand.gd" id="10_2kef0"]

[node name="Main" type="Node"]
script = ExtResource("1_o8sy6")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(640.73, 362.355)
scale = Vector2(0.438847, 0.384645)
texture = ExtResource("2_35fhj")

[node name="startScreen" parent="." instance=ExtResource("3_u4w22")]
offset_left = -6.0
offset_top = 25.0
offset_right = -6.0
offset_bottom = 25.0

[node name="dominoManager" type="Node2D" parent="."]
visible = false
position = Vector2(1, 0)
script = ExtResource("4_f3mcp")

[node name="dominoSlot" parent="." instance=ExtResource("6_jk677")]
visible = false
position = Vector2(651, 328)
script = ExtResource("7_hicqo")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cxv0x")
volume_db = -17.445
autoplay = true

[node name="screenEffect" parent="." instance=ExtResource("9_6jgts")]
visible = false

[node name="playerHand" type="Node2D" parent="."]
visible = false
script = ExtResource("10_2kef0")
